[gd_scene load_steps=5 format=2]

[ext_resource path="res://challenges/week5/scenes/map/map.tscn" type="PackedScene" id=1]
[ext_resource path="res://challenges/week5/scenes/character/character.tscn" type="PackedScene" id=2]
[ext_resource path="res://challenges/week5/scenes/main.gd" type="Script" id=3]
[ext_resource path="res://challenges/week5/scenes/locationMark/locationMark.tscn" type="PackedScene" id=4]

[node name="main" type="Node"]
script = ExtResource( 3 )

[node name="map" parent="." instance=ExtResource( 1 )]

[node name="character" parent="." instance=ExtResource( 2 )]
position = Vector2( 534, 327 )
rotation = 1.5708

[node name="locationMark" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.5, 0.5 )

[connection signal="destination" from="character" to="." method="_on_character_destination"]
[connection signal="destination_reached" from="character" to="." method="_on_character_destination_reached"]
